# sysident

./: README.md  build.sh
SysidentKernel/: CMakeLists.txt  exports.yml
SysidentKernel/src/: main.c  sysident_helper.h  sysroot.h
SysidentUser/: CMakeLists.txt  exports.yml
SysidentUser/src/: i2f.S  main.c  taihen_min.c  taihen_min.h
